--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -1,1 +1,12 @@
 @import vendor/normalize
+@import vendor/jeet/index
+
+@import lib/colors
+@import lib/mixins
+@import lib/typefaces
+@import lib/boilerplate
+
+@import layouts/home
+
+@import modules/intro
+@import modules/social
