added svg icons. having problems with hover state however.

--- a/src/css/lib/_colors.sass
+++ b/src/css/lib/_colors.sass
@@ -4,4 +4,9 @@ $green: #68d675
 $orange: #ee6926
 $dark-blue: #344857
 
+
+$twitter-blue: #55ACEE
+
 $background-color: $white
+
+$light-gray: #999999
