--- a/src/css/modules/_intro.sass
+++ b/src/css/modules/_intro.sass
@@ -1,9 +1,9 @@
-$intro-background-color: $orange
 $headshot-border-color: $dark-blue
 
 .intro
 
   text-align: center
+  margin-bottom: 2.5em
 
   &__headshot
     width: 10em
