--- a/src/css/lib/_tooltips.sass
+++ b/src/css/lib/_tooltips.sass
@@ -21,7 +21,7 @@ $tooltip-color: #444444
 
     &:before,
     &:after
-      //animation: 0.2s tooltip linear
+      animation: 0.2s tooltip linear
 
     &:before
       content: ""
