added initial form

--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -6,7 +6,10 @@
 @import lib/typefaces
 @import lib/boilerplate
 @import lib/tooltips
+@import lib/form
+@import lib/buttons
 
+@import layouts/1col
 @import layouts/home
 
 @import modules/intro
