--- a/src/_layouts/base.html
+++ b/src/_layouts/base.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Dan Sweeney is Floatingboxes</title>
+        <title>{% if page.title %}{{ page.title }}{% endif %}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="/css/styles.css?v={{ site.time | date: '%Y%m%d%H%M%S' }}">
         <script src="/js/vendor/modernizr-2.7.1.min.js"></script>
         <script type="text/javascript" src="//use.typekit.net/ari4wcq.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
