--- a/src/css/layouts/_home.sass
+++ b/src/css/layouts/_home.sass
@@ -2,6 +2,11 @@
   height: 100%
   min-height: 500px
 
+  font-size: 12px
+
   &__container
     @extend %vertically-align
     +center(30em)
+
+  +bp("tablet")
+    font-size: 16px
