--- a/src/css/lib/_typefaces.sass
+++ b/src/css/lib/_typefaces.sass
@@ -18,6 +18,6 @@
     @warn "Hey Dorkus! #{$style} is not a supported style for mixin `tisa`"
 
 @mixin sans
-  font-family: "adelle-sans",sans-serif;
+  font-family: "adelle-sans",sans-serif
   font-style: normal
   font-weight: 300
