added pear deck to home page; link styling

--- a/src/css/lib/_boilerplate.sass
+++ b/src/css/lib/_boilerplate.sass
@@ -15,3 +15,17 @@ iframe,
 video,
 svg
   max-width: 100%
+
+a,
+a:link,
+a:active,
+a:hover,
+a:visited
+  color: $blue
+  text-decoration: none
+  border-bottom: 1px dotted
+  transition: color 0.2s
+
+a:hover
+  color: $orange
+  border-bottom: 1px solid
