--- a/src/css/modules/_social.sass
+++ b/src/css/modules/_social.sass
@@ -12,6 +12,7 @@
       display: block
       width: 3em
       height: 3em
+      border-bottom: none
 
     a svg path
       transition: fill 0.2s ease-in-out
