added cute "thank you" after successful contact form submission

--- a/src/css/modules/_intro.sass
+++ b/src/css/modules/_intro.sass
@@ -6,10 +6,11 @@ $headshot-border-color: $dark-blue
   margin-bottom: 2.5em
 
   &__headshot
+    position: relative
     width: 10em
     height: 10em
     border-radius: 5em
-    overflow: hidden
+    // overflow: hidden
 
     background-color: $background-color
     padding: 0.25em
