updated meta description

--- a/src/_layouts/base.html
+++ b/src/_layouts/base.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>{% if page.title %}{{ page.title }}{% endif %}</title>
-        <meta name="description" content="">
+        <meta name="description" content="Dan Sweeney is Co-Founder and VP of Design at Pear Deck, and proudly based in the Creative Corridor in Iowa City, Iowa.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
