Basic page layout

--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -5,6 +5,7 @@
 @import lib/mixins
 @import lib/em
 @import lib/rem
+@import lib/pct
 @import lib/typefaces
 @import lib/boilerplate
 @import lib/tooltips
@@ -14,7 +15,9 @@
 
 @import layouts/1col
 @import layouts/home
+@import layouts/block
 
 @import modules/intro
+@import modules/sample
 @import modules/social
 @import modules/thanks
