--- a/src/css/layouts/_block.sass
+++ b/src/css/layouts/_block.sass
@@ -10,3 +10,8 @@
 .lo-block__content--narrow
   @extend .lo-block__content
   +center(800px)
+
+.lo-block__content--header
+  @extend .lo-block__content
+  text-align: center
+  margin-top: 4em
