home page links

--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -18,6 +18,7 @@
 @import layouts/block
 
 @import modules/intro
+@import modules/links
 @import modules/sample
 @import modules/social
 @import modules/thanks
