style for resource page

--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -1,6 +1,7 @@
 @import vendor/normalize
 @import vendor/jeet/index
 
+@import lib/border
 @import lib/colors
 @import lib/mixins
 @import lib/em
@@ -19,6 +20,7 @@
 
 @import modules/intro
 @import modules/links
+@import modules/resources
 @import modules/sample
 @import modules/social
 @import modules/thanks
