--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -18,6 +18,7 @@
 @import layouts/home
 @import layouts/block
 
+@import modules/filter
 @import modules/intro
 @import modules/links
 @import modules/resources
