header for resources page

--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -19,6 +19,7 @@
 @import layouts/block
 
 @import modules/filter
+@import modules/header
 @import modules/intro
 @import modules/links
 @import modules/resources
