resource permalink layout

--- a/src/css/modules/_resources.sass
+++ b/src/css/modules/_resources.sass
@@ -45,6 +45,9 @@ $resource-margin: $resource-size / 12
   margin-right: rem($resource-margin)
   margin-bottom: rem($resource-margin)
 
+.resource--permalink
+  @extend .resource
+  margin-right: 0
 
 .resource__header
   margin: 0 0 0.5em 0
