--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -15,13 +15,15 @@
 @import lib/breakpoint
 
 @import layouts/1col
-@import layouts/home
 @import layouts/block
+@import layouts/centered
+@import layouts/home
 
 @import modules/filter
 @import modules/header
 @import modules/intro
 @import modules/links
+@import modules/pagination
 @import modules/resources
 @import modules/sample
 @import modules/social
