basic books page

--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -19,6 +19,7 @@
 @import layouts/centered
 @import layouts/home
 
+@import modules/books
 @import modules/filter
 @import modules/header
 @import modules/intro
